# finpulse

./: .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
docs/: DEBUGGING.md  WORKFLOW.md  api.md  architecture.md
docs/adr/: 0001-monorepo-multi-service.md  0002-slim-clean-architecture.md  0003-pluggable-llm-provider.md  0004-static-frontend-no-build.md  0005-gemini-genai-sdk.md
infra/gateway/: nginx.conf
scripts/: wait-for.sh
services/ai-worker/: Dockerfile  pyproject.toml
services/ai-worker/app/: config.py  main.py  schemas.py
services/ai-worker/app/prompts/: __init__.py
services/ai-worker/app/providers/: base.py  factory.py  fake.py  gemini.py
services/ai-worker/tests/: test_api.py  test_fake_provider.py  test_gemini_mapping.py
services/api/: .dockerignore  .php-cs-fixer.php  Dockerfile  composer.json  phpunit.xml
services/api/.phpunit.cache/: test-results
services/api/config/: bootstrap.php  container.php  routes.php  settings.php
services/api/docker/: xdebug.ini
services/api/migrations/: 0001_init.sql
services/api/public/: index.php
services/api/src/Domain/Alert/: Alert.php  (+1 more)
services/api/src/Http/: JsonResponder.php
services/api/tests/Integration/: AskQuestionTest.php  ListIndicatorsTest.php  UserAlertsTest.php
services/api/tests/Unit/: InflationCorrectorTest.php  InvestmentCalculatorTest.php
services/web/: Dockerfile  index.html  package.json
services/web/src/: api.js  api.ts  main.js  main.ts  style.css
(+43 files in other folders)
