[project]
name = "finpulse-ai-worker"
version = "0.1.0"
description = "FinPulse AI worker — NL intent parsing and answer generation behind a pluggable LLM provider."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
